@@ -25,6 +25,7 @@ import static org.junit.Assert.assertTrue;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Locale;
 
 import com.exedio.cope.BooleanField;
 import com.exedio.cope.Item;
@@ -33,7 +34,7 @@ import com.exedio.cope.util.Interrupter;
 
 public final class ScheduleItem extends Item implements Scheduleable
 {
-	static final Schedule report = new Schedule();
+	static final Schedule report = new Schedule(Locale.GERMAN);
 	static final BooleanField fail = new BooleanField().defaultTo(false);
 	
 	private static final ArrayList<Log> logs = new ArrayList<Log>();
