@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* deprecated empty constructor of Schedule, provide a Locale instead
 * subclasses of MediaPath do not get the url extension anymore
 * MediaPath got new method getNamedURL, with additional parameter for setting the "name" of the media
 * Console History puts date first in unique constraints
